# weaving

./: .dockerignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml  rollback_history.txt  version.json
config/: in_house_demo.json
db/: all_tables.schema  system_log.schema  weaving.schema
docs/: API.md  Doxyfile  ReadME.md  requestDB.py
gui/: config.html  index.html  recipe_table.html  report_index.html  webGUIServer.py
gui/assets/bootstrap/css/: bootstrap.min.css
gui/assets/css/: screen_size.css
gui/assets/js/: jsoneditor_ros_bridge.js  multi_defect_ros_bridge.js  recipe_editor.js  report_ros_bridge.js
gui/assets/rangeslider/: ui-range.min.css
include/: baseType.hpp  batchCount.hpp  body.hpp  bodyMeter.hpp  bodyTowerLight.hpp  brightnessAdjuster.hpp  buzzerControl.hpp  cameraHighSpeedSimulator.hpp  cameraIndicator.hpp  cameraManager.hpp  cameraNode.hpp  componentStateTrackerLogger.hpp  cutterSensor.hpp  cuttingMachinePLCComm.hpp  cuttingManager.hpp  cycleEventTracker.hpp  dancerSensor.hpp  defect.hpp  defectsProcessor.hpp  errorTracker.hpp  executionTimer.hpp  inductiveSensor.hpp  intervalTask.hpp  job.hpp  jobAndRecipeManager.hpp  logMessage.hpp  mysqlClient.hpp  networkManager.hpp  notifier.hpp  paramStore.hpp  plcComm.hpp  realWorldMapNode.hpp  recipe.hpp  recipeJson.hpp  reportingNode.hpp  roll.hpp  speedCalculator.hpp  systemState.hpp  weavingInspection.hpp  workOrder.hpp  (+2 more)
launch/: laptop_simulation.launch
msg/: StoppingDefectImages.msg
nn/: .gitignore
src/: apiServer.py  baseType.cpp  body.cpp  brightnessAdjuster.cpp  buzzerControl.cpp  cameraHighSpeedSimulator.cpp  cameraIndicator.cpp  cameraManager.cpp  cameraNode.cpp  cuttingMachinePLCComm.cpp  cuttingManager.cpp  defect.cpp  defectsProcessor.cpp  job.cpp  jobAndRecipeManager.cpp  main.cpp  networkManager.cpp  notifier.cpp  paramStore.cpp  plcComm.cpp  realWorldMapNode.cpp  reportingNode.cpp  roll.cpp  weavingInspection.cpp  worldMapDrawer.cpp
srv/: GetCurrentPulses.srv  GetPulseDistance.srv  GetRollLog.srv  InsertDataLog.srv  LogsAPI.srv
